[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/character_portrait_background.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/character_portrait_border.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/thug_portrait.png" type="Texture" id=4]
[ext_resource path="res://component_scenes/enemies/enemy.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.92549, 0.839216, 0.156863 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.815686, 0.505882, 0.34902, 0.156863 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.552941, 0.411765, 0.478431, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Enemy" type="Control"]
script = ExtResource( 5 )

[node name="IntentionStatuses" type="GridContainer" parent="."]
margin_left = -7.0
margin_top = -19.0
margin_right = 137.0
margin_bottom = -2.0
grow_vertical = 0
rect_min_size = Vector2( 127, 16 )
columns = 4

[node name="Statuses" type="GridContainer" parent="."]
margin_left = -8.0
margin_top = 137.0
margin_right = 136.0
margin_bottom = 154.0
rect_min_size = Vector2( 127, 16 )
columns = 4

[node name="Background" type="TextureRect" parent="."]
texture = ExtResource( 2 )

[node name="Character" type="TextureRect" parent="."]
texture = ExtResource( 4 )

[node name="Border" type="TextureRect" parent="."]
texture = ExtResource( 3 )

[node name="TargetableButton" type="Button" parent="."]
visible = false
margin_left = 2.0
margin_top = 3.0
margin_right = 126.0
margin_bottom = 127.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_top = 129.0
margin_right = 128.0
margin_bottom = 135.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="TargetableButton" to="." method="_on_TargetableButton_pressed"]
